# cmake_cs

./: CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt
src/myClassLib/: CMakeLists.txt  foo.cs
src/myClassLibBase/: CMakeLists.txt  bar.cs
src/myConsoleApp/: CMakeLists.txt  main.cs
src/myWPFApp/: CMakeLists.txt
src/myWinFormsApp/: CMakeLists.txt  Form1.Designer.cs  Form1.cs  Program.cs
src/myWinFormsApp/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
